mobile fix for input zoom focus on iphone

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -19,6 +19,7 @@ header:before {
     min-height: 3em;
     padding: 1em;
     width: 100%;
+    font-size: 16px;
 }
 
 .main-search .button-container {
